<resources>
    <string name="app_name">Dental Room</string>
    <string name="app_new_contact">New Contact</string>
    <string name="app_new_group">New Group</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_add_contact">Add Contact</string>
    <string name="enter_mail">E-mail</string>
    <string name="enter_password">Password</string>
    <string name="enter_message">Enter Message</string>
    <string name="enter_nick">Enter Nick</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="send">SEND</string>
    <string name="addContact">ADD</string>
    <string name="attach_xray">ATTACH X-RAY</string>
    <string name="create_new_group">CREATE</string>
    <string name="already_member">Already Member?</string>
    <string name="need_account">Need Account?</string>
    <string name="create_group">Create Group?</string>
    <string name="enter_group_name">Enter Group Name</string>
    <string name="participants">Participants</string>
    <string name="xrayImage">X-Ray Image</string>
    <string name="add_contact_link">Add Contact?</string>
    <string name="enter_group_comment">Comment on the XRay</string>
    <string name="current_contacts">CONTACTS</string>
    <string name="groupMembers">Group Members</string>
    <string name="title_activity_render">RenderActivity</string>
    <string name="action_new_group">New Group</string>

    <array name="SpinnerValues">
        <item>"RATE"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
        <item>"5"</item>
        <item>"6"</item>
        <item>"7"</item>
        <item>"8"</item>
        <item>"9"</item>
        <item>"10"</item>
    </array>

</resources>
