<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CreateGroupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCreateGroup"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.CreateGroupActivity">

        <EditText
            android:id="@+id/editTextGroupName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_border"
            android:drawablePadding="5dp"
            android:hint="@string/enter_group_name"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextGroupComment"
            app:layout_constraintVertical_chainStyle="packed"/>

        <EditText
            android:id="@+id/editTextGroupComment"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_border"
            android:drawablePadding="5dp"
            android:hint="@string/enter_group_comment"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/editTextGroupName"
            app:layout_constraintBottom_toTopOf="@id/attachButton"/>

        <Button
            android:id="@+id/attachButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/attach_xray"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/rounded_border"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/editTextGroupComment"
            app:layout_constraintBottom_toTopOf="@id/createGroupButton"/>

        <Button
            android:id="@+id/createGroupButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/create_new_group"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/rounded_border"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/attachButton"
            app:layout_constraintBottom_toTopOf="@id/addContactLink"/>

        <TextView
            android:id="@+id/addContactLink"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/add_contact_link"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/createGroupButton"
            app:layout_constraintBottom_toTopOf="@id/seperator"/>

        <View
            android:id="@+id/seperator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/createGroupButton"
            app:layout_constraintBottom_toTopOf="@id/textViewContacts"/>

        <TextView
            android:id="@+id/textViewContacts"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/current_contacts"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/seperator"
            app:layout_constraintBottom_toTopOf="@id/recyclerViewContacts"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewContacts"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="invisible">
    </ProgressBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>