<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContactActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddContact"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:nestedScrollingEnabled="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.ContactActivity">

        <EditText
            android:id="@+id/editTextNick"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_border"
            android:drawablePadding="5dp"
            android:hint="@string/enter_nick"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextMail"
            app:layout_constraintVertical_chainStyle="packed"/>

        <EditText
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/rounded_border"
            android:drawablePadding="5dp"
            android:hint="@string/enter_mail"
            android:inputType="text"
            android:paddingLeft="10dp"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/editTextNick"
            app:layout_constraintBottom_toTopOf="@id/addContactButton"/>

        <Button
            android:id="@+id/addContactButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/addContact"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/rounded_border"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/editTextMail"
            app:layout_constraintBottom_toTopOf="@id/createGroupLink"/>

        <TextView
            android:id="@+id/createGroupLink"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/create_group"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/addContactButton"
            app:layout_constraintBottom_toTopOf="@id/seperator"/>

        <View
            android:id="@+id/seperator"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/createGroupLink"
            app:layout_constraintBottom_toTopOf="@id/textViewContacts"/>

        <TextView
            android:id="@+id/textViewContacts"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/current_contacts"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="32dp"
            app:layout_constraintTop_toBottomOf="@id/seperator"
            app:layout_constraintBottom_toTopOf="@id/recyclerViewContacts"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewContacts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/textViewContacts"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:visibility="invisible"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>