<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.GroupActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarGroup"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <Button
                android:id="@+id/toolbarButtonReorder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/ic_action_reorder" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewXRay"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true" />

            <TextView
                android:id="@+id/groupMembers"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/groupMembers"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/textComment"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/linearLayout"
            app:layout_constraintBottom_toTopOf="@id/recyclerViewGroupMessages"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewGroupMessages"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/textComment"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/inputConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <EditText
                android:id="@+id/editTextInput"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_border"
                android:drawableStart="@drawable/ic_action_email"
                android:drawablePadding="5dp"
                android:hint="@string/enter_message"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/colorPrimary"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.6" />

            <Spinner
                android:id="@+id/spinnerInputComment"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_border"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@id/editTextInput"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.2" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@drawable/rounded_border"
                android:text="@string/send"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toEndOf="@id/spinnerInputComment"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.2" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>